--- a/package.json
+++ b/package.json
@@ -6,13 +6,51 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export --platform web",
+    "deploy": "npm run build:web && firebase deploy --only hosting",
+    "deploy:firestore": "firebase deploy --only firestore:indexes,firestore:rules",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test e2e/ui.spec.js",
+    "test:e2e:social": "playwright test e2e/social.spec.js",
+    "test:e2e:social:fast": "cross-env E2E_FAST=1 playwright test --workers=2 e2e/social.spec.js",
+    "test:e2e:social:fast:4w": "cross-env E2E_FAST=1 playwright test --workers=4 e2e/social.spec.js",
+    "setup:e2e": "powershell -ExecutionPolicy Bypass -File scripts\\setup-e2e-env.ps1",
+    "e2e:create-users": "node scripts\\create-e2e-users.js",
+    "test:e2e:report": "playwright show-report",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" \"*.{js,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\" \"*.{js,json,md}\""
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.51.0",
+    "cross-env": "^10.1.0",
+    "dotenv": "^16.4.7",
+    "prettier": "^3.7.4"
   },
   "dependencies": {
+    "@expo-google-fonts/manrope": "^0.4.2",
+    "@react-native-firebase/analytics": "^23.7.0",
+    "@react-native-picker/picker": "^2.11.4",
+    "@react-navigation/bottom-tabs": "^7.8.11",
+    "@react-navigation/drawer": "^7.7.8",
+    "@react-navigation/native": "^7.1.24",
+    "@react-navigation/native-stack": "^7.8.5",
+    "@sentry/react-native": "^7.8.0",
     "expo": "~54.0.27",
+    "expo-font": "^14.0.10",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linking": "~8.0.11",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.6.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "^4.2.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
