--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
-    "build:web:prerender": "expo export --platform web && npx react-snap",
+    "build:web:prerender": "expo export --platform web && node scripts\\prerender.js",
     "deploy": "npm run build:web:prerender && firebase deploy --only hosting",
     "deploy:firestore": "firebase deploy --only firestore:indexes,firestore:rules",
     "test:e2e": "playwright test",
@@ -53,25 +53,6 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-web": "^0.21.0"
-  },
-  "reactSnap": {
-    "source": "dist",
-    "publicPath": "/",
-    "include": [
-      "/",
-      "/Main/Feed",
-      "/profile/example"
-    ],
-    "crawl": false,
-    "skipThirdPartyRequests": true,
-    "inlineCss": true,
-    "minifyHtml": {
-      "collapseWhitespace": true
-    },
-    "puppeteerArgs": [
-      "--no-sandbox",
-      "--disable-setuid-sandbox"
-    ]
   },
   "private": true
 }
