--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-reanimated": "^4.2.0",
