--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
-    "build:web:prerender": "expo export --platform web && node scripts\\prerender.js",
+    "generate:sitemaps": "node scripts\\generate-sitemaps.js",
+    "build:web:prerender": "npm run generate:sitemaps && expo export --platform web && node scripts\\prerender.js",
     "deploy": "npm run build:web:prerender && firebase deploy --only hosting",
     "deploy:firestore": "firebase deploy --only firestore:indexes,firestore:rules",
     "test:e2e": "playwright test",
